[package]
name = "skyak_axum_core"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/skyaktech/axum_core"
authors = ["Nebojsa Jakovljevic nebojsa@nebjak.dev"]
license = "MIT"
description = "Core utilities and extensions for Axum web framework"
keywords = ["axum", "web", "framework", "core"]
categories = ["web-programming"]
readme = "README.md"

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = "1"